Fix paragraph spacing on mobile

--- a/src/components/CaseStudy.sass
+++ b/src/components/CaseStudy.sass
@@ -3,6 +3,10 @@
     position: relative
     text-align: center
     background-color: $dark-bg
+    .paddingTopDesktop
+        padding-top: 6rem
+        @include mobile
+            padding-top: 2rem
     .splash
         position: relative
         padding-bottom: 56.25%
@@ -40,7 +44,13 @@
         padding: 0rem 1rem 1rem
         &.full-width + p:not(.full-width)
             padding: 3rem 1rem 1rem
+            @include mobile
+                padding: 2rem 1rem 1rem
         &:not(.full-width) + .full-width
-            margin-top: 3rem
+            margin-top: 2rem
+            @include mobile
+                margin-top: 1rem
         &:not(.full-width):last-of-type
             padding: 0 1rem 3rem
+            @include mobile
+                padding: 0 1rem 2rem
